# risk-tier-tool-v2

./: .dockerignore  .gitignore  .pylintrc  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/assets/: filter_query_reference.md  session_export_doc.md
app/classes/: auto_band.py  constants.py  data.py  explorer.py  filter_container.py  iteration.py  iteration_graph.py  metric.py  metric_container.py  options.py  session.py  summary_page_state.py  utils.py
app/views/: __init__.py  charts.py  summary.py
assets/: filter_query_reference.md  style.css
classes/: auto_band.py  common.py  config.py  constants.py  data.py  filter.py  filter_container.py  home_page_state.py  iteration.py  iteration_graph.py  metadata.py  options.py  scalars.py  session.py  singleton.py  summary_page_state.py  utils.py
data/: test_data.csv  test_data.xlsx
risc_tool/: __init__.py  main.py
risc_tool/classes/: auto_band.py  constants.py  data.py  iteration_graph.py  scalars.py  singleton.py  summary_page_state.py
risc_tool/config/: page_config.py  session_state.py
risc_tool/data/: session.py
risc_tool/pages/: __init__.py  navigation.py
risc_tool/utils/: duplicate_name.py  hash_boolean_series.py  json_formatter.py  new_id.py  wrap_text.py  write_once_dict.py
scripts/: install-devcontainer-dependencies.sh  run-debug.sh  run-win.ps1  run.sh
views/: __init__.py  charts.py  components.py  config.py  data_importer.py  export.py  home.py  iterations.py  options.py  scalars.py  summary.py  variable_selector.py
(+155 files in other folders)
