[project]
name = "risk-tier-tool"
version = "0.1.0"
description = ""A tool to assess and visualize risk tiers based on user input."
readme = "README.md"
requires-python = ">=3.9.19"
dependencies = [
    "openpyxl>=3.1.5",
    "streamlit>=1.45.0",
    "streamlit-flow-component>=1.6.1",
    "streamlit-sortables>=0.3.1",
]
